--- a/views/home.ejs
+++ b/views/home.ejs
@@ -47,7 +47,7 @@
             </li>
             <li class="col pl-0 pr-0"></li>
             <li class="nav-item">
-              <a class="nav-link page-scroll" href="/register" style="display: none;">👉🏻 &nbsp;Register Now&nbsp; 👈🏻</a>
+              <a class="nav-link page-scroll" href="/register">👉🏻 &nbsp;Register Now&nbsp; 👈🏻</a>
             </li>
             
           </ul>
@@ -506,7 +506,7 @@
     </script>
 
     <!-- float facebook like box start -->
-    <script async defer id="float_fb" data-href="https://www.facebook.com/SIMPICOfficial/">
+    <!-- <script async defer id="float_fb" data-href="https://www.facebook.com/SIMPICOfficial/">
       (function() {
         var defaults = {
             container_width:280,
@@ -569,7 +569,7 @@
           w.animate({right:right_}, function(){ status_ = 'hide';});
         }); */
       })();
-    </script>
+    </script> -->
     <!-- float facebook like box end -->
     <script>
       $(function() {
