--- a/views/information/registration.ejs
+++ b/views/information/registration.ejs
@@ -44,7 +44,6 @@
           <p>Extra information submission: you will be required to fill in the extra information within the same period as payment.</p>
           <p>Official announcement of competitor list: Jan 24, 2021</p>
           <p>* Due to our limited seat, qualified applicants will be selected based on the motivation letter and the short essay submitted.</p>
-          <br/>
 
           <h6><b>Registration fee</b> covers the following expenses</h6>
           <ul>
@@ -56,10 +55,15 @@
           <br/>
 
           <h6><b>Require Documents</b></h6>
+          <ol style="margin-bottom: 0;">
+            <li>A statement verifying your status as representatives from your medical school or NMO-IFMSA</li>
+            * The statement form can be <a target="_blank" href="https://drive.google.com/drive/folders/1l1pZbBO6FhHcWeWrgRUMlda_10uXZyzf">downloaded</a> from our official website.<br><br>
+            * If you prefer to change to on-site competition, you must submit the following documents within Dec 19, 2021. The approved team, announced on Jan 3, are allowed to choose either on-site or online competition within Jan 22, 2021.
+          </ol>
           <ol>
-            <li>A statement verifying your status as representatives from your medical school [for team represents medical school] or your IFMSA-NMO [for team represents IFMSA-NMO]</li>
-            * The statement form can be downloaded from our official website.
             <li>A motivation letter from each applying team expressing your goal for joining the competition. [Less than 150 words]</li>
+            <li>A consent letter for state quarantine conditions and government issues.</li>
+            * The consent letter form can be downloaded from our official website.
             <li>A short essay responding to the question [Less than 200 words]:</li>
             “Explain the underlying mechanism in COVID-19 Reinfection in severely reinfected cases and how this phenomenon may affect the vaccine efficiency?”
           </ol>
@@ -85,11 +89,11 @@
           <h6><b>Require Documents</b></h6>
           <ol>
             <li>A statement verifying your status as representatives from your medical school or NMO-IFMSA.</li>
-            * The statement form can be downloaded from our official website.<br/>
+            * The statement form can be <a target="_blank" href="https://drive.google.com/drive/folders/1l1pZbBO6FhHcWeWrgRUMlda_10uXZyzf">downloaded</a> from our official website.<br/>
             * If you prefer to change to on-site competition, you must submit the following documents within Dec 19, 2021. The approved team, announced on Jan 3, are allowed to choose either on-site or online competition within Jan 22, 2021.
             <li>A motivation letter from each applying team expressing your goal for joining the competition. [Less than 150 words]</li>
             <li>A consent letter for state quarantine conditions and government issues.</li>
-            * The consent letter form can be downloaded from our official website.
+            * The consent letter form can be <a target="_blank" href="https://drive.google.com/drive/folders/1l1pZbBO6FhHcWeWrgRUMlda_10uXZyzf">downloaded</a> from our official website.
             <li>A short essay responding to the question [Less than 200 words]:</li>
             “Explain the underlying mechanism in COVID-19 Reinfection in severely reinfected cases and how this phenomenon may affect the vaccine efficiency?”
           </ol>
